--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.8",
     "express": "~4.16.1",
     "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
+    "mongodb": "^6.2.0",
     "mongoose": "^7.0.2",
     "morgan": "~1.9.1",
     "passport": "^0.6.0",
